# Practical_Rust_Web

./: README.md
catdex/: .env  Cargo.toml
catdex-api/: .env  Cargo.toml  cert.pem  key-no-password.pem  key.pem
catdex-api/migrations/2021-01-29-081829_create_cats/: up.sql
catdex-api/src/: errors.rs  main.rs  models.rs
catdex-api/static/: cat.html  index.html
catdex-api/static/css/: cat.css
catdex/migrations/2021-01-28-024955_create_cats/: down.sql  up.sql
catdex/src/: main.rs  models.rs  schema.rs
catdex/static/: add.html  index.html
catdex/static/css/: index.css
chat/: Cargo.toml
chat/client/: index.html
chat/client/js/: index.js
chat/src/: main.rs
echo-server/: Cargo.toml
echo-server/client/: index.html
echo-server/client/js/: index.js
hello_world/: Cargo.toml
ping-pong/: Cargo.toml
ping-pong/client/: index.js
ping-pong/src/: main.rs
push-notification/: Cargo.toml
push-notification/client/: index.html
push-notification/src/: main.rs
