[package]
name = "catdex-api"
version = "0.1.0"
authors = ["mdeveloper66 <m.developer66@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web={version = "3.3.2", features = ["openssl"]}
actix-files="0.5.0"
serde = "1.0.123"
serde_json="1.0.61"
diesel={version = "1.4.5", features = ["postgres", "r2d2"]}
r2d2="0.8.9"
dotenv="0.15.0"
actix-rt="1.1.1"
validator = "0.12.0"
validator_derive = "0.12.0"
derive_more = "0.99.11"
openssl = "0.10.32"
env_logger = "0.8.2"
