[package]
name = "chat"
version = "0.1.0"
authors = ["mdeveloper66 <m.developer66@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.61"
ws = "0.9.1"
